@@ -1,3 +1,3 @@
 #Build Number for ANT. Do not edit!
-#Sun Oct 22 11:20:21 CEST 2006
-build.number=367
+#Mon Oct 23 10:36:34 CEST 2006
+build.number=368
