@@ -9,10 +9,10 @@ Require-Bundle: org.restlet,
  com.noelios.restlet,
  com.noelios.restlet.ext.net,
  com.noelios.restlet.ext.simple;resolution:=optional,
- com.noelios.restlet.ext.jetty6;resolution:=optional,
  com.noelios.restlet.ext.asyncweb;resolution:=optional,
+ com.noelios.restlet.ext.jetty6;resolution:=optional,
+ edu.oswego.cs.dl.util.concurrent;resolution:=optional,
  org.apache.mina;resolution:=optional,
  org.apache.commons.logging;resolution:=optional,
- edu.oswego.cs.dl.util.concurrent;resolution:=optional,
  org.slf4j;resolution:=optional
 Export-Package: com.noelios.restlet.example
