@@ -6,11 +6,13 @@ Bundle-Version: 1.0.0
 Bundle-Vendor: Noelios Consulting
 Bundle-Localization: plugin
 Require-Bundle: org.restlet,
- com.noelios.restlet,
+ org.freemarker,
  org.junit4,
+ com.noelios.restlet,
+ com.noelios.restlet.ext.freemarker,
  com.noelios.restlet.ext.net,
- com.noelios.restlet.ext.jetty6;resolution:=optional,
  com.noelios.restlet.ext.simple;resolution:=optional,
+ com.noelios.restlet.ext.jetty6;resolution:=optional,
  com.noelios.restlet.ext.asyncweb;resolution:=optional,
  com.noelios.restlet.ext.atom
 Export-Package: com.noelios.restlet.test
