@@ -38,6 +38,7 @@ public class NoeliosTestSuite extends TestSuite
       addTestSuite(DirectoryTestCase.class);
       addTestSuite(FileReferenceTestCase.class);
       addTestSuite(FormTestCase.class);
+      addTestSuite(FreeMarkerTestCase.class);
       addTestSuite(PreferencesTestCase.class);
       addTestSuite(RedirectTestCase.class);
       addTestSuite(SecurityTestCase.class);
